# gurobipy-quadratic-cutting-planes

./: demo.py  pyproject.toml
cutting_planes/: __init__.py  extended_cutting_planes.py  outer_approximation.py  quadratic.py
