[tool.poetry]
name = "cutting-planes"
version = "0.1.0"
description = ""
authors = ["sandyspiers <sandy.spiers@curtin.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gurobipy = "^11.0.3"
numpy = "^2.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
